# xsLLhFitter_TKI

anaevents/src/: AnaEvent.hh  AnaSample.cc  AnaSample.hh  AnaTreeMC.cc  AnaTreeMC.hh
cmake/: build_setup.sh.in
errprop/src/: FitObj.cc  FitObj.hh  XsecCalc.cc  XsecCalc.hh
fitparam/src/: AnaFitParameters.cc  AnaFitParameters.hh  DetParameters.cc  DetParameters.hh  FitParameters.cc  FitParameters.hh  XsecParameters.cc  XsecParameters.hh
macros/: combine_flux.cc  genResponse_W.C  genResponse_all.C  genResponse_dat.C  genResponse_dptt.C  genResponse_pN.C  genResponse_proton.C  test.C  treeConvert_LR.cc  treeConvert_LR_cc_ACLiC_dict_rdict.pcm  treeConvert_all_variables.cc  treeConvert_dat.cc  treeConvert_dptt.cc  treeConvert_dptt_DIS.cc  treeConvert_dptt_combine.cc  treeConvert_pN.cc  treeConvert_prod6T.cc
plot_macros/: makePlots.C  makePlots_Samples.C  makePlots_Samples_CEWG.C  makePlots_Samples_SIpion.C  makePlots_genie_fakedata.C  makePlots_genie_fakedata_dat.C  makePlots_genie_fakedata_pN.C
src/: CMakeLists.txt  xsllhCalcXsec.cxx  xsllhDetVariations.cxx  xsllhDetVariations_test.cxx  xsllhFit.cxx  xsllhOneSigma.cxx
utils/src/: BinManager.cc  CMakeLists.txt  OptParser.cc  OptParser.hh  XsecDial.cc  XsecDial.hh  XsecNorm.cc  XsecNorm.hh
xsecfit/src/: XsecFitter.cc  XsecFitter.hh
